--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Journal
-  site_tagline: A stunning personal blog Jekyll theme with an image-focused design.
+  site_title: Tim Schütz
+  site_tagline: Master's student in Cultural Anthropology and Fulbright fellow at the University of California, Irvine.
   favicon_image: /images/favicon.png
 
 header_settings:
