--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,12 +10,18 @@ header_settings:
 
 menu_settings:
   menu_items:
-    - title: 'Latest'
+    - title: 'Home'
       url: '/'
     - title: 'Projects'
       url: '/projects/'
     - title: 'About'
       url: '/about'
+    - title: 'Publications'
+      url: '/publications/'
+    - title: 'Talks'
+      url: '/presentations/'
+    - title: 'Projects'
+      url: '/projects/'
     - title: 'Contact'
       url: '/contact'
 
