--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,9 +17,9 @@ menu_settings:
     - title: 'About'
       url: '/about'
     - title: 'Publications'
-      url: '/publications/'
+      url: '/publications'
     - title: 'Talks'
-      url: '/presentations/'
+      url: '/presentations'
     - title: 'Projects'
       url: '/projects/'
     - title: 'Contact'
