--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Tim Schütz
-  site_tagline: Cultural Anthropology grad student and Fulbright fellow at the University of California, Irvine.
+  site_tagline: Cultural Anthropology student and Fulbright fellow at the University of California, Irvine.
   favicon_image: /images/favicon-tree.png
 
 header_settings:
